...
        android:layout_marginBottom="-4dp"
        android:background="#9DBA87"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/signOutButton"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:contentDescription="Sign out Button"
...
